2016-02-21  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
  * Added wavelet denoise.

2016-02-20  6.9.3-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-5, GIT revision 10572:cb24a69:20160219.

2016-02-16  6.9.3-5 Cristy  <quetzlzacatenango@image...>
  * Too many bytes when writing raw image formats (reference
    https://github.com/ImageMagick/ImageMagick/issues/132).

2016-02-12  6.9.3-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-4, GIT revision 10560:09f5f5d:20160212.

2016-02-12  6.9.3-4 Dirk Lemstra <dirk@lem.....org>
  * Fixed memory leak when reading an SVG without width/height (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=27&p=130197).

2016-02-09  6.9.3-4 Cristy  <quetzlzacatenango@image...>
  * Fix compiler error for complext text layout.

2016-02-05  6.9.3-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-3, GIT revision 10540:6b4c918:20160206.

2016-02-04  6.9.3-3 Cristy  <quetzlzacatenango@image...>
  * Numerous bugs fixed from fuzzed images (reference
    https://github.com/ImageMagick/ImageMagick/issues/123).
  * The -bias option is no longer a noop (reference
    https://github.com/ImageMagick/ImageMagick/issues/125).

2016-01-25  6.9.3-3 Dirk Lemstra <dirk@lem.....org>
  * Read XCF layer name (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=129638).

2016-01-23  6.9.3-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-2, GIT revision 10496:315028c:20160122.

2016-01-17  6.9.3-2 Cristy  <quetzlzacatenango@image...>
  * Don't reuse lock after free (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29031).

2016-01-21  6.9.3-2 Dirk Lemstra <dirk@lem.....org>
  * Fixed writing DocClass in CALS coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&p=129478).

2016-01-17  6.9.3-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.3-1, GIT revision 10488:e4f046e:20160116.
