@@ -1,3 +1,7 @@
+2016-02-25  6.9.3-6 Cristy  <quetzlzacatenango@image...>
+  * Ensure TXT: image format survives round-trip (reference
+    https://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=29206).
+
 2016-02-21  6.9.2-6 Dirk Lemstra <dirk@lem.....org>
   * Added wavelet denoise.
 
